--- a/Assets/templates/index.html
+++ b/Assets/templates/index.html
@@ -94,14 +94,16 @@
   </div>
 </div>
 
+
 <!-- Footer -->
 <footer class="page-footer font-small blue">
 
-  <div class="footer-copyright text-center py-3">
-    <div class="bottom">
-      <p><a href="https://www.linkedin.com/mwlite/in/livesh-kumar-226474155">
+  <div class="py-3">
+    <p><a href="https://github.com/dev-osiris/Employee-promotion-prediction">Github</a></p>
+
+    <p><a href="https://www.linkedin.com/mwlite/in/livesh-kumar-226474155">
             Livesh kumar | Employee Promotion Predictor</a></p>
-    </div>
+
   </div>
 
 </footer>
