--- a/Assets/templates/index.html
+++ b/Assets/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <title>Heading</title>
   </head>
   <body style="background-color:powderblue;">
@@ -14,11 +14,6 @@
   <div class="jumbotron" id="holder">
     <h1 class='main_heading'> Employee Promotion Prediction</h1>
     <h3>A Machine Learning model to predict the likelihood of promotion</h3>
-    <br>
-    <div class="instructions">
-      <h2>Instructions: </h2>
-      <p>1. Providing all features is necessary.</p>
-    </div>
     <br>
     <br>
     <form class="form-horizontal" method="post">
