--- a/Assets/static/css/style.css
+++ b/Assets/static/css/style.css
@@ -1,127 +1,151 @@
-@font-face {
-  font-family: Raleway-Black;
-  src: url('../fonts/raleway/Raleway-Black.ttf');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@font-face {
-  font-family: Raleway-SemiBold;
-  src: url('../fonts/raleway/Raleway-SemiBold.ttf');
+/* for mobile */
+body {
+  color: #5D6063;
+  background-color: #EAEDF0;
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 1.3;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@font-face {
-  font-family: Raleway-Bold;
-  src: url('../fonts/raleway/Raleway-Bold.ttf');
+.speaker-form-header {
+  text-align: center;
+  background-color: #F6F7F8;
+  border: 1px solid #D6D9DC;
+  border-radius: 3px;
+  
+  width: 80%;
+  margin: 40px 0;
+  padding: 50px;
 }
 
-form label {
-  font-weight: bold;
+.speaker-form-header h1 {
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
-p{
-  color: black !important;
-  font-family: Raleway-SemiBold, sans-serif !important;
-
+.speaker-form {
+  background-color: #F6F7F8;
+  border: 1px solid #D6D9DC;
+  border-radius: 3px;
+  
+  width: 80%;
+  padding: 50px;
+  margin: 0 0 40px 0;
 }
 
-body, html {
-	height: 100%;
-	font-family: Raleway-SemiBold, sans-serif;
+.form-row {
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-body{
-  background-image: url('bg.jpg');
-   background-repeat: no-repeat, repeat;
-    background-position: center; /* Center the image */
-    background-size: cover;
+.form-row input[type='text'],
+.form-row input[type='number'] {
+  background-color: #FFFFFF;
+  border: 1px solid #D6D9DC;
+  border-radius: 3px;
+  width: 100%;
+  padding: 7px;
+  font-size: 14px;
 }
 
-a {
-	font-family: Raleway-SemiBold;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-	transition: all 0.4s;
-	-webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
+.form-row label {
+  margin-bottom: 15px;
 }
 
-.main{
-  margin-top: 12vh;
+.legacy-form-row {
+  border: none;
+  margin-bottom: 40px;
 }
 
-a:focus {
-	outline: none !important;
+.legacy-form-row legend {
+  margin-bottom: 15px;
 }
 
-a:hover {
-	text-decoration: none;
-}
-.highlight{
-  text-decoration: underline !important;
-  color: #9D50BB !important;
-}
-
-h1,h2,h3,h4,h5,h6 {
-	margin-bottom: 9px;
-}
-
-p,.control-label {
-	font-family: Raleway-SemiBold;
-	font-size: 18px !important;
-	color: #666666;
-	margin: 0px;
-}
-
-ul, li {
-	margin: 0px;
-	list-style-type: none;
-}
-.main_heading{
-  margin-top: -15px !important;
-  font-size: 50px !important;
+.legacy-form-row .radio-label {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.logo{
-    width: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    /* width: 50%; */
+  font-size: 14px;
+  padding: 0 20px 0 10px;
 }
 
-.jumbotron{
-  /* margin-top: 20vh; */
+.legacy-form-row input[type='radio'] {
+  margin-top: 2px;
 }
-input {
-  border-radius: 20px !important;
-  height: 43px !important;
-}
-
-button {
-  border-radius: 20px !important;
-	outline: none !important;
-  height: 40px !important;
-  width: 100px;
-  color: #000 !important;
-  background: #9D50BB !important;
-  background: -webkit-linear-gradient(to right, #ff5d00, #ffb200) !important;  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #ff5d00, #ffb200) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
+  
+.legacy-form-row .radio-label,
+.legacy-form-row input[type='radio'] {
+  float: left;
 }
 
-button:hover {
-	cursor: pointer;
-}
-.bottom p{
-  color: black !important;
-  background: #F8F8FF;
-  width: 1145px;
-  margin: auto;
-  size: 10px;
+.form-row button {
+  font-size: 16px;
+  font-weight: bold;
 
+  color: #FFFFFF;
+  background-color: #5995DA;
+
+  border: none;
+  border-radius: 3px;
+
+  padding: 8px 30px;
+  cursor: pointer;
+}
+
+.form-row button:hover {
+  background-color: #76AEED;
+}
+
+.form-row button:active {
+  background-color: #407FC7;
+}
+
+
+/* for pc */
+@media only screen and (min-width: 700px) {
+  .speaker-form-header,
+  .speaker-form {
+    width: 700px;
+  }
+  .form-row {
+    flex-direction: row;
+    align-items: flex-start; /* To avoid stretching */
+    margin-bottom: 20px;
+  }
+  .form-row input[type='text'] ,
+  .form-row input[type='number'] {
+    width: 250px;
+    height: initial;
+  }
+  .form-row label {
+    text-align: right;
+    width: 120px;
+    margin-top: 7px;
+    padding-right: 20px;
+  }
+  .legacy-form-row {
+      margin-bottom: 10px;
+    }
+  .legacy-form-row legend {
+      width: 120px;
+      text-align: right;
+      padding-right: 20px;
+  }
+  .legacy-form-row legend {
+      float: left;
+  }
+  .form-row button {
+      margin-left: 120px;
+  }
 }
